--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:layout_width="150sp"
+        android:layout_height="150sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40sp"
+        android:id="@+id/profileImageView"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/profileImageView"
+        android:layout_marginTop="10sp"
+        android:id="@+id/nameTv"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/nameTv"
+        android:layout_marginTop="10sp"
+        android:id="@+id/emailTv"/>
+
+    <com.google.android.gms.common.SignInButton
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/emailTv"
+        android:layout_marginTop="16dp"
+        android:id="@+id/signIn"/>
 
     <Button
         android:id="@+id/openBrowserButton"
@@ -27,5 +58,6 @@
         android:layout_height="wrap_content"
         android:text="Share Text"
         android:layout_marginTop="16dp" />
-</LinearLayout>
+
+</RelativeLayout>
 
