--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_height="150sp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40sp"
-        android:id="@+id/profileImageView"/>
+        android:id="@+id/profileImageView"
+        app:shapeAppearanceOverlay="@style/roundedImageView"/>
 
     <TextView
         android:layout_width="wrap_content"
