--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40sp"
         android:id="@+id/profileImageView"
-        app:shapeAppearanceOverlay="@style/roundedImageView"/>
+        android:shapeAppearanceOverlay="@style/roundedImageView"/>
 
     <TextView
         android:layout_width="wrap_content"
